--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile ('com.mikepenz.materialdrawer:library:0.9.5@aar') {
         transitive = true
     }
+
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -33,4 +34,5 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     compileOnly 'com.google.android.wearable:wearable:2.4.0'
     compile 'com.android.support:support-v4:20.0.0'
+    implementation 'com.android.support:design:26.1.0'
 }
