--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     compileOnly 'com.google.android.wearable:wearable:2.4.0'
     compile 'com.android.support:support-v4:20.0.0'
     implementation 'com.android.support:design:26.1.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'ru.egslava:MaskedEditText:1.0.5'
 }
