--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'ru.egslava:MaskedEditText:1.0.5'
+    compile 'io.realm:android-adapters:2.1.1'
 }
